--- a/Adventure.Web/Views/Home/About.cshtml
+++ b/Adventure.Web/Views/Home/About.cshtml
@@ -1,18 +1,14 @@
 ﻿@*about.cshtml*@
 <!DOCTYPE html>
-<html ng-app="testapp">
+<html ng-app="testapp" ng-cloak>
 <head>
     <meta name="viewport" content="width=device-width" />
-
-    <script src="~/Scripts/angular.js"></script>
-    <script src="~/Scripts/angular-resource.js"></script>
-    <script src="~/Scripts/toastr.min.js"></script>
-    <link href="~/Content/toastr.css" rel="stylesheet" />
+   
+    <link href="~/Scripts/advanced/angular-advanced-searchbox.css" rel="stylesheet" />
+    <script src="~/Scripts/advanced/angular-advanced-searchbox-tpls.min.js"></script>    
     <!-- optional for auto complete / suggested value feature -->
     <script src="~/Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
-
-    <link href="~/Scripts/advanced/angular-advanced-searchbox.css" rel="stylesheet" />
-    <script src="~/Scripts/advanced/angular-advanced-searchbox-tpls.min.js"></script>
+       
     <link href="~/Scripts/angular-ui-grid/ui-grid.min.css" rel="stylesheet" />
     <script src="~/Scripts/angular-ui-grid/ui-grid.min.js"></script>
 
@@ -20,14 +16,11 @@
     
     <script src="~/app/app.js"></script>
     <script src="~/app/ctrl/userCtrl.js"></script>
-    <script src="~/app/services/testservices.js"></script>
-    <h2>About</h2>
+    <script src="~/app/services/testservices.js"></script>       
 </head>
 
-    <body ng-controller="userCtrl" ng-init="getCustomers()">   
-        
-        <h2>Tasty Paginated Menu</h2>
-        
+    <body ng-controller="userCtrl" >   
+             
         <div class="row">
             <div class="col-xs-4">
                 <label for="search">Search:</label>
@@ -43,17 +36,52 @@
         </div>
         <br>
         <div class="panel panel-default">
-            <div class="panel-body">
-                <ul>
-                    <li dir-paginate="customer in customers | filter:q | itemsPerPage: pageSize" current-page="currentPage">{{ customer.FirstName }} {{ customer.LastName }}</li>
-                </ul>
+            <div>
+                <table class="table table-responsive table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th ng-click="sort('LastName')">
+                                Last Name
+                                <span class="glyphicon sort-icon" ng-show="sortKey=='LastName'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                            </th>
+                            <th ng-click="sort('FirstName')">
+                                First Name
+                                <span class="glyphicon sort-icon" ng-show="sortKey=='FirstName'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                            </th>
+                            <th ng-click="sort('CompanyName')">
+                                Company
+                                <span class="glyphicon sort-icon" ng-show="sortKey=='CompanyName'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                            </th>
+                            <th ng-click="sort('EmailAddress')">
+                                Email
+                                <span class="glyphicon sort-icon" ng-show="sortKey=='EmailAddress'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                            </th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr dir-paginate="customer in customers | filter:q | orderBy:sortKey:reverse | itemsPerPage: pageSize" current-page="currentPage">
+                            <td>{{customer.LastName}}</td>
+                            <td>{{customer.FirstName}}</td>
+                            <td>{{customer.CompanyName}}</td>
+                            <td>{{customer.EmailAddress}}</td>
+                            <td>
+                                <a href="Home/About/edit/{{customer.CustomerID}}" class="glyphicon glyphicon-edit"></a>
+                            </td>    
+                            <td>
+                                <button type="button" class="btn btn-default" ng-click="setCustomer(customer)"><i class="glyphicon glyphicon-edit"></i>Edit</button>                                
+                            </td>                        
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
         <div class="text-">
             <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="~/app/ctrl/dirPagination.tpl.html"></dir-pagination-controls>
         </div>  
              
-        
+        <!--
         <script type="text/javascript">
         $(function () {
             toastr.options = {
@@ -64,5 +92,6 @@
             }
         });
         </script>
+        -->
     </body>
 </html>
